--- a/mattriley.css
+++ b/mattriley.css
@@ -14,13 +14,13 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-.dev-bar a {
+.dev-bar a, ::slotted(a) {
     padding-left: 1.5rem;
     text-decoration: none;
     color: white;
 }
 
-.dev-bar a:hover {
+.dev-bar a:hover, ::slotted(a:hover) {
     text-decoration: underline;
 }
 
